TMZ-492 fix image stretch for form lite, cta, flex hero

--- a/modules/content/assets/scss/hello-plus-cta.scss
+++ b/modules/content/assets/scss/hello-plus-cta.scss
@@ -53,6 +53,7 @@
 
 	&.has-image-stretch {
 		--cta-image-width: 100%;
+		--cta-image-height: 100%;
 
 		padding: 0;
 
