--- a/modules/forms/assets/scss/widgets/hello-plus-forms.scss
+++ b/modules/forms/assets/scss/widgets/hello-plus-forms.scss
@@ -424,6 +424,7 @@
 
 	&.has-image-stretch {
 		--form-image-width: 100%;
+		--form-image-height: 100%;
 
 		gap: 0;
 		padding: 0;
